| Bug #19033 | RBR: slave does not handle schema change correctly | ||
|---|---|---|---|
| Submitted: | 12 Apr 2006 7:36 | Modified: | 9 Mar 2007 15:51 |
| Reporter: | Tomas Ulin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Row Based Replication ( RBR ) | Severity: | S2 (Serious) |
| Version: | 5.1 bk src | OS: | |
| Assigned to: | Mats Kindahl | CPU Architecture: | Any |
[12 Apr 2006 7:36]
Tomas Ulin
[12 Apr 2006 7:36]
Tomas Ulin
changed spelling mistake in title
[22 Jan 2007 7:41]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/18514 ChangeSet@1.2372, 2007-01-22 08:41:07+01:00, mats@romeo.(none) +6 -0 BUG#19033 (RBR: slave does not handle schema changes correctly): Since checking table compatibility before locking the table, there were potential that a table could be locked that did not have a definition that was compatible with the table on the slave. This patch adds a check just after the table was locked to ensure that the table is (still) compatible with the table on the slave.
[26 Jan 2007 18:30]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/18869 ChangeSet@1.2372, 2007-01-26 19:29:57+01:00, mats@romeo.(none) +6 -0 BUG#19033 (RBR: slave does not handle schema changes correctly): Since checking table compatibility before locking the table, there were potential that a table could be locked that did not have a definition that was compatible with the table on the slave. This patch adds a check just after the table was locked to ensure that the table is (still) compatible with the table on the slave.
[23 Feb 2007 18:21]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/20484 ChangeSet@1.2411, 2007-02-23 18:54:26+01:00, mats@romeo.(none) +3 -0 BUG#19033 (RBR: slave does not handle schema changes correctly): Post-merge fixes.
[9 Mar 2007 15:51]
MC Brown
No changelog entry required.
